--- a/app/views/application/_flashes.html.erb
+++ b/app/views/application/_flashes.html.erb
@@ -1,4 +1,4 @@
-<%#= locals: ()  -%>
+<%# locals: ()  -%>
 
 <div class="container is-fluid" data-turbo-temporary>
   <% flash.each do |level, message| %>
